--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "5e860a93-84bc-4523-8e98-7d7527f7a86c"
   },
   "newProjectRoot": "projects",
   "projects": {
